--- a/e-commerce/package.json
+++ b/e-commerce/package.json
@@ -11,9 +11,11 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-loading": "^2.0.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "react-star-ratings": "^2.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
