--- a/e-commerce/package.json
+++ b/e-commerce/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "react-star-ratings": "^2.3.0",
+    "react-tippy": "^1.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
