--- a/e-commerce/package.json
+++ b/e-commerce/package.json
@@ -2,7 +2,7 @@
   "name": "e-commerce",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/e-commerce",
+  "homepage": "/",
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
